# phoebusgen

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reload_local_pip.sh  search.html  searchindex.js  setup.cfg  setup.py  test_pip.py  upload_pip.sh  versioneer.py
.docbuild/: build-docs.sh  conf.py  index.rst
.docbuild/_build/doctrees/: environment.pickle  index.doctree
.docbuild/_build/doctrees/source/: modules.doctree  phoebusgen.doctree  phoebusgen.screen.doctree  phoebusgen.widget.doctree
.docbuild/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
.github/: build-docs.sh
.github/workflows/: build-docs.yml  ci.yml  pre-commit.yml  python-publish.yml
_sources/: index.rst.txt
_sources/source/: phoebusgen.rst.txt  phoebusgen.v4.properties.rst.txt  phoebusgen.v4.rst.txt  phoebusgen.v4.widgets.rst.txt
docbuild/: conf.py
docs/: .buildinfo  WIDGET.md  check_phoebus.py  compare.sh  conf.py  genindex.html  index.html  objects.inv  phoebus.yaml  py-modindex.html  run_test.sh  search.html  searchindex.js  test_pip.py  widget.md
docs/_sources/source/: modules.rst.txt  phoebusgen.rst.txt  phoebusgen.widget.rst.txt
docs/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/html/source/: phoebusgen.html  phoebusgen.screen.html  phoebusgen.widget.html
docs/source/: modules.html  phoebusgen.html  phoebusgen.screen.html  phoebusgen.screen.rst  phoebusgen.widget.html
examples/: example1.bob  example1.py  example2.py  exampleInPhoebus.bob  exampleInPhoebus.py  example_image.py  example_xyplot.py
files/: new.bob
files/widgets/: label.bob  label_test.bob  text-update.bob
phoebusgen/: __init__.py  _shared_property_helpers.py  _version.py  colors.yaml  fonts.yaml  phoebusgen.py  screen.py  shared_property_helpers.py  utils.py
phoebusgen/config/: 4.7.1_widgets.def  4.7.2_widgets.def  4.7.3_widgets.def  4.7_widgets.def  font.def
phoebusgen/properties/: __init__.py  behavior.py  display.py  misc.py  position.py  property_helpers.py  types.py  widget.py
phoebusgen/screen/: __init__.py  screen.py
phoebusgen/v4/: __init__.py  screen.py  utils.py
phoebusgen/v4/properties/: __init__.py  behavior.py  display.py  misc.py  position.py  property_helpers.py  types.py  widget.py
phoebusgen/v4/widgets/: __init__.py  controls.py  defaults.py  graphics.py  misc.py  monitors.py  plots.py  structure.py  widget.py
phoebusgen/widget/: __init__.py  _property.py  _property_stubs.py  _widget.py  colors.yaml  fonts.yaml  properties.py  property.py  property_mixins.py  property_stubs.py  widget.py  widgets.py
phoebusgen/widgets/: __init__.py  controls.py  graphics.py  misc.py  monitors.py  plots.py  structure.py  widget.py
source/: modules.html  phoebusgen.html  phoebusgen.screen.html  phoebusgen.v4.html  phoebusgen.v4.properties.html  phoebusgen.v4.widgets.html  phoebusgen.widget.html
tests/: .property_helpers.py.swp  conftest.py  property_helpers.py  test_label.py  test_pip.py  test_property.py  test_screen.py  test_textupdate.py  test_widget.py  test_widgets.py
tests/bobfiles/: one_of_every_widget.bob
tests/test_properties/: conftest.py  test_behavior_properties.py  test_misc_properties.py  test_position_properties.py  test_properties_base.py  test_widget_properties.py
tests/test_widgets.py/: conftest.py  test_graphics_widgets.py  test_misc_widgets.py  test_widgets_base.py
tests/v4/: conftest.py  test_screen_base.py
tests/v4/bobfiles/: Example_TOP1.bob  Example_TOP2.bob  one_of_every_widget.bob
tests/v4/test_properties/: conftest.py  test_behavior_properties.py  test_misc_properties.py  test_position_properties.py  test_properties_base.py  test_widget_properties.py
tests/v4/test_widgets/: conftest.py  test_controls_widgets.py  test_graphics_widgets.py  test_misc_widgets.py  test_monitors_widgets.py  test_plots_widgets.py  test_structure_widgets.py  test_tabs.py  test_widgets_base.py
tests/v4/test_widgets.py/: conftest.py  test_graphics_widgets.py  test_widgets_base.py
(+10 files in other folders)
